Fix img width overflow

--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -70,6 +70,7 @@ body {
 }
 
 .card__img {
+  max-width: 100%;
   min-width: 100%;
   min-height: 100%;
   height: 30vh;
